[package]
name = "sdu_openrss"
version = "0.1.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
fantoccini = "0.17.3"
tokio = { version = "1.5.0", features = ["full"] }
webdriver = "0.43.0"
serde_json = "1.0.61"
html_parser = "0.6.2"
chrono = "0.4.19"
rss = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
ellipse = "0.2.0"
regex = "1.5.4"